Hyprland rabbit hole ᓚ₍ ^. .^₎

--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,4 +1,8 @@
 window_padding_width 4
+remember_window_size  yes
+initial_window_width  740
+initial_window_height 600
+enable_audio_bell no
 
 # The basic colors
 foreground              #CDD6F4
