--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -56,7 +56,7 @@ exec-once = swaync # Notification daemon
 exec-once = waybar # The bar above
 exec-once = swww-daemon # Wallpaper stuff
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # Authentication Agent
-exec-once = mount /dev/sda1 /mnt/disk1
+exec-once = eww daemon # Custom widgets
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -223,6 +223,11 @@ bind = $mainMod, SPACE, exec, $menu
 bind = SUPER_SHIFT, Print, exec, hyprshot -m region --clipboard-only
 bind = , Print, exec, hyprshot -m output --clipboard-only
 bind = $mainMod, KP_Left, exec, pkill waybar && hyprctl dispatch exec waybar
+
+
+# Widgets
+bind = $mainMod, M, exec, ~/.config/eww/launchers/launch_powerbuttons
+
 #numpad
 bind = $mainMod, KP_INSERT, exec, swww img ~/.config/hypr/wallpapers/0.jpg --transition-type center
 bind = $mainMod, KP_END, exec, swww img ~/.config/hypr/wallpapers/1.jpg --transition-type center
@@ -239,7 +244,6 @@ bind = $mainMod, KP_NEXT, exec, swww img ~/.config/hypr/wallpapers/3.jpg --trans
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
