--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -57,6 +57,8 @@ exec-once = waybar # The bar above
 exec-once = swww-daemon # Wallpaper stuff
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # Authentication Agent
 exec-once = eww daemon # Custom widgets
+exec-once = ~/.config/eww/launchers/launch_powerbutton
+
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -82,8 +84,8 @@ general {
     border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgb(5EE3F2) # rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(ffadadaa)
+    col.active_border = rgb(5ee3f2) rgb(ffadad) 45deg
+    col.inactive_border = rgb(1d1d27)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -96,8 +98,7 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 7
-
+    rounding = 6 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
@@ -223,10 +224,9 @@ bind = $mainMod, SPACE, exec, $menu
 bind = SUPER_SHIFT, Print, exec, hyprshot -m region --clipboard-only
 bind = , Print, exec, hyprshot -m output --clipboard-only
 bind = $mainMod, KP_Left, exec, pkill waybar && hyprctl dispatch exec waybar
-
+bind = $mainMod, F, fullscreen,
 
 # Widgets
-bind = $mainMod, M, exec, ~/.config/eww/launchers/launch_powerbuttons
 
 #numpad
 bind = $mainMod, KP_INSERT, exec, swww img ~/.config/hypr/wallpapers/0.jpg --transition-type center
