--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -11,7 +11,6 @@ $directory\
 $character\
 """
 right_format = """
-$git_status\
 $git_branch\
 """
 add_newline = false 
@@ -42,23 +41,23 @@ format = ' [$symbol$environment](dimmed green) '
 
 # Prompt symbols 
 [character]
-success_symbol = "[󰄛](green bold)"
-error_symbol = "[󰄛](lred)"
-vicmd_symbol = "[󰄛](peach)"
+success_symbol = "[ 󰄛](lblue bold)"
+error_symbol = "[ 󰄛](lred)"
+vicmd_symbol = "[ 󰄛](peach)"
 
 [directory]
-format = "[]($style)[ ](bg:base fg:text)[$path](bg:base fg:text bold)[]($style)"
-style = "bg:none fg:base"
+format = "[  ](bg:dblue fg:text)[$path](bg:dblue fg:text bold)"
+style = "bg:none fg:dblue"
 truncation_length = 3
 truncate_to_repo=false
 
 [git_branch]
-format = "[]($style)[[ ](fg:rose bold)$branch](fg:rose bold)[ ]($style)"
+format = "[[ ](fg:lpruple bold)$branch](fg:lpruple bold)"
 style = "bg:none fg:base"
 
 [git_status]
 # $all status$ahead_behind
-format = "[]($style)[$all_status$ahead_behind](bg:base fg:yellow) "
+format = "[$all_status$ahead_behind](bg:base fg:yellow) "
 style = "bg:none fg:base"
 conflicted = "="
 ahead =	"⇡${count}"
@@ -75,7 +74,7 @@ deleted = "${count}"
 [cmd_duration]
 min_time = 1
 # duration & style 
-format = "[]($style)[[神](bg:base fg:flamingo bold)$duration](bg:base fg:text)[ ]($style)"
+format = "[[神](bg:base fg:flamingo bold)$duration](bg:base fg:text)"
 disabled = false
 style = "bg:none fg:base"
 
@@ -84,6 +83,7 @@ rose = "#ffadad"
 lblue = "#5ee3f2"
 lred = "#f53c3c"
 dblue = "#1d1d27"
+lpurple = "#b4befe"
 
 rosewater = "#f5e0dc"
 flamingo = "#f2cdcd"
@@ -100,7 +100,7 @@ sapphire = "#74c7ec"
 blue = "#89b4fa"
 lavender = "#b4befe"
 
-text = "#5ee3f2"
+text = "#ffadad"
 subtext1 = "#bac2de"
 subtext0 = "#a6adc8"
 overlay2 = "#9399b2"
