--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,9 +37,9 @@ monitor = HDMI-A-1, 1920x1080@60.00Hz, 0x0, 1 # This is the external monitor
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = nautilus
 $menu = rofi -show run
-
+$emailClient = thunderbird
 
 #################
 ### AUTOSTART ###
