--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -223,23 +223,18 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, SPACE, exec, $menu
 bind = SUPER_SHIFT, Print, exec, hyprshot -m region --clipboard-only
 bind = , Print, exec, hyprshot -m output --clipboard-only
-bind = $mainMod, KP_Left, exec, pkill waybar && hyprctl dispatch exec waybar
 bind = $mainMod, F, fullscreen,
 
-# Widgets
+bindl = , switch:Lid Switch, exec,
 
 #numpad
 bind = $mainMod, KP_INSERT, exec, swww img ~/.config/hypr/wallpapers/0.jpg --transition-type center
 bind = $mainMod, KP_END, exec, swww img ~/.config/hypr/wallpapers/1.jpg --transition-type center
 bind = $mainMod, KP_DOWN, exec, swww img ~/.config/hypr/wallpapers/2.jpg --transition-type center
 bind = $mainMod, KP_NEXT, exec, swww img ~/.config/hypr/wallpapers/3.jpg --transition-type center
-# bind = $mainMod, KP_Left, , 
-# bind = $mainMod, KP_Begin, , 
-# bind = $mainMod, KP_Right, , 
-# bind = $mainMod, KP_Home, , 
-# bind = $mainMod, KP_Up, , 
-# bind = $mainMod, KP_Prior, , 
-
+bind = $mainMod, KP_Left, exec, swww img ~/.config/hypr/wallpapers/4.jpg  --transition-type center
+bind = $mainMod, KP_Begin, exec, swww img ~/.config/hypr/wallpapers/5.jpg  --transition-type center
+bind = $mainMod, KP_Right, exec, swww img ~/.config/hypr/wallpapers/6.jpg  --transition-type center
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
