--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,38 +1,39 @@
 window_padding_width 4
-remember_window_size  yes
-initial_window_width  740
+remember_window_size yes
+initial_window_width 740
 initial_window_height 600
 enable_audio_bell no
 
 # The basic colors
-foreground              #CDD6F4
-background              #1d1d27
-selection_foreground    #1E1E2E
-selection_background    #F5E0DC
-background_opacity 0.97
+foreground #e5b566
+background #17121C
+background_opacity 0.95
+
+selection_foreground #17121C
+selection_background #e5b566
 
 # Cursor colors
-cursor                  #F5E0DC
-cursor_text_color       #1E1E2E
+cursor            #e5b566
+cursor_text_color #1E1E2E
 
 # URL underline color when hovering with mouse
-url_color               #F5E0DC
+url_color #F5E0DC
 
 # Kitty window border colors
-active_border_color     #B4BEFE
-inactive_border_color   #6C7086
-bell_border_color       #F9E2AF
+active_border_color   #B4BEFE
+inactive_border_color #6C7086
+bell_border_color     #F9E2AF
 
 # OS Window titlebar colors
 wayland_titlebar_color system
 macos_titlebar_color system
 
 # Tab bar colors
-active_tab_foreground   #1d1d27
+active_tab_foreground   #17121C
 active_tab_background   #CBA6F7
 inactive_tab_foreground #CDD6F4
-inactive_tab_background #1d1d27
-tab_bar_background      #1d1d27
+inactive_tab_background #17121C
+tab_bar_background      #17121C
 
 # Colors for marks (marked text in the terminal)
 mark1_foreground #1E1E2E
@@ -43,25 +44,20 @@ mark3_foreground #1E1E2E
 mark3_background #74C7EC
 
 # The 16 terminal colors
+color0 #222831
+color1 #F4A3A3
+color2 #D4E3A8
+color3 #E8BC7A
+color4 #B8E5E7
+color5 #9582B7
+color6 #52D6D3
+color7 #FAF0E7
 
-background            #1d1d27
-foreground            #d0d0d0
-cursor                #d0d0d0
-selection_background  #303030
-color0                #151515
-color1                #ac4142
-color2                #7e8d50
-color3                #e5b566
-color4                #6c99ba
-color5                #9e4e85
-color6                #7dd5cf
-color7                #d0d0d0
-color8                #505050
-color9                #ac4142
-color10               #7e8d50
-color11               #e5b566
-color12               #6c99ba
-color13               #9e4e85
-color14               #7dd5cf
-color15               #f5f5f5
-selection_foreground #202020
+color8  #222831
+color9  #F4A3A3
+color10 #D4E3A8
+color11 #E8BC7A
+color12 #B8E5E7
+color13 #9582B7
+color14 #52D6D3
+color15 #FAF0E7
