--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -16,8 +16,7 @@
 
 # You can split this configuration into multiple files
 # Create your files separately and then link them to this file like this:
-# source = ~/.config/hypr/myColors.conf
-
+# source = ~/.config/hypr/myColors.confss
 
 ################
 ### MONITORS ###
@@ -27,7 +26,6 @@
 # monitor=,preferred,auto,auto
 monitor = eDP-1, disable # This is the laptop's monitor
 monitor = HDMI-A-1, 1920x1080@60.00Hz, 0x0, 1 # This is the external monitor
-
 
 ###################
 ### MY PROGRAMS ###
@@ -52,13 +50,12 @@ $emailClient = thunderbird
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
-exec-once = swaync # Notification daemon
-exec-once = waybar # The bar above
+exec-once = mako        # Notification daemon
+exec-once = waybar      # The bar above
 exec-once = swww-daemon # Wallpaper stuff
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 # Authentication Agent
-exec-once = eww daemon # Custom widgets
-exec-once = ~/.config/eww/launchers/launch_powerbutton
-
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # Authentication Agent
+exec-once = ~/.config/eww/scripts/powerbuttons # Custom widgets
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -68,7 +65,6 @@ exec-once = ~/.config/eww/launchers/launch_powerbutton
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
 
 #####################
 ### LOOK AND FEEL ###
@@ -84,7 +80,7 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgb(9582B7) rgb(ffadad) 45deg
+    col.active_border = rgb(9582B7) rgb(ffadad) 90deg
     col.inactive_border = rgb(1d1d27)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -184,10 +180,10 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = br
+    kb_layout = br,ru
+    kb_options = grp:alt_space_toggle 
     kb_variant =
     kb_model =
-    kb_options =
     kb_rules =
 
     follow_mouse = 1
@@ -227,7 +223,9 @@ bind = $mainMod, F, fullscreen,
 
 bindl = , switch:Lid Switch, exec,
 
-#numpad
+# Numpad binds
+
+## Wallpaper
 bind = $mainMod, KP_INSERT, exec, swww img ~/.config/hypr/wallpapers/0.jpg --transition-type center
 bind = $mainMod, KP_END, exec, swww img ~/.config/hypr/wallpapers/1.jpg --transition-type center
 bind = $mainMod, KP_DOWN, exec, swww img ~/.config/hypr/wallpapers/2.jpg --transition-type center
@@ -235,21 +233,29 @@ bind = $mainMod, KP_NEXT, exec, swww img ~/.config/hypr/wallpapers/3.jpg --trans
 bind = $mainMod, KP_Left, exec, swww img ~/.config/hypr/wallpapers/4.jpg  --transition-type center
 bind = $mainMod, KP_Begin, exec, swww img ~/.config/hypr/wallpapers/5.jpg  --transition-type center
 bind = $mainMod, KP_Right, exec, swww img ~/.config/hypr/wallpapers/6.jpg  --transition-type center
+bind = $mainMod, KP_HOME, exec, pkill waybar && hyprctl dispatch exec waybar
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
-bind = $mainMod, C, killactive,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
 
-# Move focus with mainMod + arrow keys
+bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, C, killactive,
+bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, V, togglefloating,
+
+# Move focus
 bind = $mainMod, A, movefocus, l
 bind = $mainMod, D, movefocus, r
 bind = $mainMod, W, movefocus, u
 bind = $mainMod, S, movefocus, d
+
+# Move window
+bind = $mainMod, left, movewindow, l
+bind = $mainMod, right, movewindow, r
+bind = $mainMod, down, movewindow, d
+bind = $mainMod, up, movewindow, u
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
