--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,63 +1,57 @@
-window_padding_width 4
-remember_window_size yes
-initial_window_width 740
-initial_window_height 600
-enable_audio_bell no
-
 # The basic colors
-foreground #e5b566
-background #17121C
-background_opacity 0.95
+foreground #EDE6F2
+background #0F0514
+background_opacity 0.93
 
-selection_foreground #17121C
-selection_background #e5b566
+selection_foreground #0F0514
+selection_background #9A5EE0
 
 # Cursor colors
-cursor            #e5b566
-cursor_text_color #1E1E2E
+cursor            #EDE6F2
+cursor_text_color #312936
 
 # URL underline color when hovering with mouse
-url_color #F5E0DC
+url_color #3BA6A4
 
 # Kitty window border colors
-active_border_color   #B4BEFE
-inactive_border_color #6C7086
-bell_border_color     #F9E2AF
+active_border_color   #9A5EE0
+inactive_border_color #6E3FCF
+bell_border_color     #7CA53D
 
 # OS Window titlebar colors
 wayland_titlebar_color system
 macos_titlebar_color system
 
 # Tab bar colors
-active_tab_foreground   #17121C
-active_tab_background   #CBA6F7
-inactive_tab_foreground #CDD6F4
-inactive_tab_background #17121C
-tab_bar_background      #17121C
+active_tab_foreground   #EDE6F2
+active_tab_background   #6E3FCF
+inactive_tab_foreground #A89DB2
+inactive_tab_background #0F0514
+tab_bar_background      #0F0514
 
-# Colors for marks (marked text in the terminal)
-mark1_foreground #1E1E2E
-mark1_background #B4BEFE
-mark2_foreground #1E1E2E
-mark2_background #CBA6F7
-mark3_foreground #1E1E2E
-mark3_background #74C7EC
+# Colors for marks
+mark1_foreground #312936
+mark1_background #9A5EE0
+mark2_foreground #312936
+mark2_background #6E3FCF
+mark3_foreground #312936
+mark3_background #7CA53D
 
 # The 16 terminal colors
-color0 #222831
-color1 #F4A3A3
-color2 #D4E3A8
-color3 #E8BC7A
-color4 #B8E5E7
-color5 #9582B7
-color6 #52D6D3
-color7 #FAF0E7
+color0  #1B1423
+color1  #D46A8C
+color2  #7CA53D
+color3  #A4CE70
+color4  #6B85C1
+color5  #9A5EE0
+color6  #3BA6A4
+color7  #EDE6F2
 
-color8  #222831
-color9  #F4A3A3
-color10 #D4E3A8
-color11 #E8BC7A
-color12 #B8E5E7
-color13 #9582B7
-color14 #52D6D3
-color15 #FAF0E7
+color8  #22182E
+color9  #E283A3
+color10 #A4CE70
+color11 #98C379
+color12 #87B4F2
+color13 #B589F4
+color14 #6CD9D7
+color15 #FAF0FF
