--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,3 +1,17 @@
 # Theme
 include current-theme.conf
-#
+
+# CONFIG
+enable_audio_bell no
+window_padding_width 4
+remember_window_size yes
+initial_window_width 740
+initial_window_height 600
+
+# BEGIN_KITTY_FONTS
+font_family      family="Hack"
+font_size 11.0
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
