--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -19,9 +19,9 @@ render = true
 "C-ret" = ["normal_mode", "open_below"]
 
 [keys.normal]
-"A-j" = ["goto_line_end","extend_line_below", "delete_selection", "move_line_up", "paste_before"]
-"A-k" = ["goto_line_end","extend_line_below", "delete_selection", "paste_after"]
+"A-k" = ["goto_line_end","extend_line_below", "delete_selection", "move_line_up", "paste_before"]
+"A-j" = ["goto_line_end","extend_line_below", "delete_selection", "paste_after"]
 
 [keys.select]
-"A-j" = ["goto_line_end","extend_line_below",  "delete_selection", "move_line_up", "paste_before", "select_mode"]
-"A-k" = ["goto_line_end","extend_line_below",  "delete_selection", "paste_after", "select_mode" ]
+"A-k" = ["goto_line_end","extend_line_below",  "delete_selection", "move_line_up", "paste_before", "select_mode"]
+"A-j" = ["goto_line_end","extend_line_below",  "delete_selection", "paste_after", "select_mode" ]
