--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -51,7 +51,8 @@ $emailClient = thunderbird
 # exec-once = waybar & hyprpaper & firefox
 
 exec-once = mako        # Notification daemon
-exec-once = waybar      # The bar above
+# exec-once = waybar      # The bar above
+exec-once = quickshell -p ~/.config/quickshell/bar 
 exec-once = swww-daemon # Wallpaper stuff
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # Authentication Agent
 exec-once = ~/.config/eww/scripts/powerbuttons # Custom widgets
@@ -218,7 +219,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Custom
 bind = $mainMod, SPACE, exec, $menu
 bind = SUPER_SHIFT, Print, exec, hyprshot -m region --clipboard-only
-bind = , Print, exec, hyprshot -m output --clipboard-only
+bind = , Print, exec, grim -g "$(slurp)" - | wl-copy
 bind = $mainMod, F, fullscreen,
 
 bindl = , switch:Lid Switch, exec,
