--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -227,13 +227,13 @@ bindl = , switch:Lid Switch, exec,
 # Numpad binds
 
 ## Wallpaper
-bind = $mainMod, KP_INSERT, exec, swww img ~/.config/hypr/wallpapers/0.jpg --transition-type center
-bind = $mainMod, KP_END, exec, swww img ~/.config/hypr/wallpapers/1.jpg --transition-type center
-bind = $mainMod, KP_DOWN, exec, swww img ~/.config/hypr/wallpapers/2.jpg --transition-type center
-bind = $mainMod, KP_NEXT, exec, swww img ~/.config/hypr/wallpapers/3.jpg --transition-type center
-bind = $mainMod, KP_Left, exec, swww img ~/.config/hypr/wallpapers/4.jpg  --transition-type center
-bind = $mainMod, KP_Begin, exec, swww img ~/.config/hypr/wallpapers/5.jpg  --transition-type center
-bind = $mainMod, KP_Right, exec, swww img ~/.config/hypr/wallpapers/6.jpg  --transition-type center
+bind = $mainMod, KP_INSERT, exec, swww img ~/.local/share/wallpapers/0.jpg --transition-type center
+bind = $mainMod, KP_END, exec, swww img ~/.local/share/wallpapers/1.jpg --transition-type center
+bind = $mainMod, KP_DOWN, exec, swww img ~/.local/share/wallpapers/2.jpg --transition-type center
+bind = $mainMod, KP_NEXT, exec, swww img ~/.local/share/wallpapers/3.jpg --transition-type center
+bind = $mainMod, KP_Left, exec, swww img ~/.local/share/allpapers/4.jpg  --transition-type center
+bind = $mainMod, KP_Begin, exec, swww img ~/.local/share/wallpapers/5.jpg  --transition-type center
+bind = $mainMod, KP_Right, exec, swww img ~/.local/share/wallpapers/6.jpg  --transition-type center
 bind = $mainMod, KP_HOME, exec, pkill waybar && hyprctl dispatch exec waybar
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
