--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -76,13 +76,13 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 2
-    gaps_out = 5
+    gaps_out = 3
 
     border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgb(9582B7) # rgb(ffadad) 90deg
-    col.inactive_border = rgb(1d1d27)
+    col.active_border = rgb(9A5EE0) # rgb(ffadad) 90deg
+    col.inactive_border = rgb(312936)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -95,7 +95,7 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 6 
+    rounding = 2 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
