yet another palette tweak

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -63,21 +63,19 @@ staged = "+${count}"
 renamed = "»${count}"
 deleted = "${count}"
 
-[palettes.Bunny]
-black = "#0F0514"
-base = "#1D1620"
-mantle = "#18121B"
-crust = "#100912"
 
+[palettes.Bunny]
+background = "#17131A"
+background_soft = "#221B26"
+lighter_background = "#312936"
+purple_foreground = "#D6C1ED"
+green_foreground = "#D9E8CD"
+grey_foreground = "#A89DB2"
 accent = "#9A5EE0"
 accent_dark = "#6E3FCF"
-rose = "#D46A8C"
-lavender = "#B69CF4"
-muted_blue = "#6B85C1"
-green = "#7CA53D"
-cyan = "#6BB9A7"
-grey = "#5A5162"
-fg = "#EDE6F2"
-muted_dark = "#312936"
-muted_dark2 = "#22182E"
+accent_soft = "#B18EDC"
+additional_accent = "#C48FB3"
+additional_accent_dark = "#A56C8A"
 complementary = "#7CA53D"
+complementary_soft = "#A4CE70"
+border_grey = "#4B4354"
