--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,57 +1,65 @@
+
 # The basic colors
-foreground #EDE6F2
-background #0F0514
+foreground #D6C1ED
+background #17131A
 background_opacity 0.93
 
-selection_foreground #0F0514
-selection_background #9A5EE0
+selection_foreground #17131A
+selection_background #B18EDC
+
 
 # Cursor colors
-cursor            #EDE6F2
+cursor            #D6C1ED
 cursor_text_color #312936
 
+
 # URL underline color when hovering with mouse
-url_color #3BA6A4
+url_color #C48FB3
+
 
 # Kitty window border colors
 active_border_color   #9A5EE0
-inactive_border_color #6E3FCF
+inactive_border_color #4B4354
 bell_border_color     #7CA53D
+
 
 # OS Window titlebar colors
 wayland_titlebar_color system
 macos_titlebar_color system
 
+
 # Tab bar colors
-active_tab_foreground   #EDE6F2
+active_tab_foreground   #D6C1ED
 active_tab_background   #6E3FCF
 inactive_tab_foreground #A89DB2
-inactive_tab_background #0F0514
-tab_bar_background      #0F0514
+inactive_tab_background #221B26
+tab_bar_background      #221B26
+
 
 # Colors for marks
-mark1_foreground #312936
+mark1_foreground #17131A
 mark1_background #9A5EE0
-mark2_foreground #312936
-mark2_background #6E3FCF
-mark3_foreground #312936
+mark2_foreground #17131A
+mark2_background #B18EDC
+mark3_foreground #17131A
 mark3_background #7CA53D
 
-# The 16 terminal colors
-color0  #1B1423
-color1  #D46A8C
-color2  #7CA53D
-color3  #A4CE70
-color4  #6B85C1
-color5  #9A5EE0
-color6  #3BA6A4
-color7  #EDE6F2
 
-color8  #22182E
-color9  #E283A3
-color10 #A4CE70
-color11 #98C379
-color12 #87B4F2
-color13 #B589F4
-color14 #6CD9D7
-color15 #FAF0FF
+# The 16 terminal colors
+color0  #17131A  
+color1  #9A5EE0  
+color2  #7CA53D  
+color3  #A4CE70  
+color4  #6E3FCF  
+color5  #B18EDC  
+color6  #C48FB3  
+color7  #D6C1ED  
+
+color8  #221B26  
+color9  #A56C8A  
+color10 #D9E8CD 
+color11 #A89DB2
+color12 #312936
+color13 #4B4354 
+color14 #FAF0FF 
+color15 #98C379 
