--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -52,7 +52,7 @@ $emailClient = thunderbird
 
 exec-once = mako        # Notification daemon
 # exec-once = waybar      # The bar above
-exec-once = quickshell -p ~/.config/quickshell/bar 
+exec-once = quickshell -p ~/.config/quickshell 
 exec-once = swww-daemon # Wallpaper stuff
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # Authentication Agent
 exec-once = ~/.config/eww/scripts/powerbuttons # Custom widgets
@@ -81,8 +81,8 @@ general {
     border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgb(9A5EE0) # rgb(ffadad) 90deg
-    col.inactive_border = rgb(312936)
+    col.active_border = rgb(6E5898) # rgb(ffadad) 90deg
+    col.inactive_border = rgb(4B4354)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
