--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,65 +1,57 @@
-
 # The basic colors
-foreground #D6C1ED
+foreground #E6DFF0
 background #17131A
 background_opacity 0.93
 
 selection_foreground #17131A
-selection_background #B18EDC
-
+selection_background #8B6FB4
 
 # Cursor colors
-cursor            #D6C1ED
+cursor            #E6DFF0
 cursor_text_color #312936
 
-
 # URL underline color when hovering with mouse
-url_color #C48FB3
-
+url_color #C6A5BC
 
 # Kitty window border colors
-active_border_color   #9A5EE0
-inactive_border_color #4B4354
-bell_border_color     #7CA53D
-
+active_border_color   #8B6FB4
+inactive_border_color #6E5898
+bell_border_color     #9BB27A
 
 # OS Window titlebar colors
-wayland_titlebar_color system
-macos_titlebar_color system
-
+wayland_titlebar_color #221B26
+macos_titlebar_color #221B26
 
 # Tab bar colors
-active_tab_foreground   #D6C1ED
-active_tab_background   #6E3FCF
-inactive_tab_foreground #A89DB2
+active_tab_foreground   #E6DFF0
+active_tab_background   #8B6FB4
+inactive_tab_foreground #BFB3CB
 inactive_tab_background #221B26
 tab_bar_background      #221B26
 
-
 # Colors for marks
-mark1_foreground #17131A
-mark1_background #9A5EE0
-mark2_foreground #17131A
-mark2_background #B18EDC
-mark3_foreground #17131A
-mark3_background #7CA53D
-
+mark1_foreground #312936
+mark1_background #8B6FB4
+mark2_foreground #312936
+mark2_background #6E5898
+mark3_foreground #DAE8D0
+mark3_background #789659
 
 # The 16 terminal colors
-color0  #17131A  
-color1  #9A5EE0  
-color2  #7CA53D  
-color3  #A4CE70  
-color4  #6E3FCF  
-color5  #B18EDC  
-color6  #C48FB3  
-color7  #D6C1ED  
+color0  #17131A
+color1  #C6A5BC
+color2  #789659
+color3  #9BB27A
+color4  #8B6FB4
+color5  #6E5898
+color6  #B7A1D3
+color7  #E6DFF0
 
-color8  #221B26  
-color9  #A56C8A  
-color10 #D9E8CD 
-color11 #A89DB2
-color12 #312936
-color13 #4B4354 
-color14 #FAF0FF 
-color15 #98C379 
+color8  #221B26
+color9  #C6A5BC
+color10 #789659
+color11 #DAE8D0
+color12 #8B6FB4
+color13 #B7A1D3
+color14 #BFB3CB
+color15 #E6DFF0
