--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -25,10 +25,10 @@ golang.disabled = true
 
 [username]
 show_always = true
-style_user = "fg:accent bold"
-style_root = "fg:accent bold"
-format = '[$user]($style)'
 disabled = false
+style_user = "fg:accent_pink bold"
+style_root = "fg:accent_pink bold"
+format = '[$user]($style)'
 
 [conda]
 format = ' [$symbol$environment](dimmed green) '
@@ -40,17 +40,17 @@ vicmd_symbol = "[ 🐇](lavender)"
 
 [directory]
 format = "[  ](fg:accent)[$path](fg:accent bold)"
-style = "fg:muted_dark"
+style = "fg:accent_soft"
 truncation_length = 3
 truncate_to_repo = false
 
 [git_branch]
 format = "[[ ](fg:accent bold)$branch](fg:accent bold)"
-style = "fg:base"
+style = "fg:accent_dark"
 
 [git_status]
 format = "[$all_status$ahead_behind](fg:accent_dark) "
-style = "fg:base"
+style = "fg:complementary"
 conflicted = "="
 ahead = "⇡${count}"
 behind = "⇣${count}"
@@ -67,15 +67,13 @@ deleted = "${count}"
 [palettes.Bunny]
 background = "#17131A"
 background_soft = "#221B26"
-lighter_background = "#312936"
-purple_foreground = "#D6C1ED"
-green_foreground = "#D9E8CD"
-grey_foreground = "#A89DB2"
-accent = "#9A5EE0"
-accent_dark = "#6E3FCF"
-accent_soft = "#B18EDC"
-additional_accent = "#C48FB3"
-additional_accent_dark = "#A56C8A"
-complementary = "#7CA53D"
-complementary_soft = "#A4CE70"
-border_grey = "#4B4354"
+background_alt = "#312936"
+accent = "#8B6FB4"
+accent_dark = "#6E5898"
+accent_soft = "#B7A1D3"
+accent_pink = "#C6A5BC"
+foreground = "#E6DFF0"
+foreground_muted = "#BFB3CB"
+complementary = "#789659"
+complementary_soft = "#9BB27A"
+complementary_foreground = "#DAE8D0"
