--- a/home/.config/hypr/hyprland.conf
+++ b/home/.config/hypr/hyprland.conf
@@ -58,6 +58,7 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # Authenti
 exec-once = ~/.config/eww/scripts/powerbuttons # Custom widgets
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = fcitx5
+exec-once = vicinae server
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -76,8 +77,8 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 2
-    gaps_out = 3
+    gaps_in = 5
+    gaps_out = 12 
 
     border_size = 1
 
@@ -218,13 +219,18 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Custom
-bind = $mainMod, SPACE, exec, $menu
+# bind = $mainMod, SPACE, exec, $menu
 bind = SUPER_SHIFT, Print, exec, hyprshot -m region --clipboard-only
 bind = , Print, exec, grim -g "$(slurp)" - | wl-copy
 bind = $mainMod, F, fullscreen,
+bind = $mainMod, Space, exec, vicinae toggle
 
 bindl = , switch:Lid Switch, exec,
+layerrule = blur,vicinae
+layerrule = ignorealpha 0, vicinae
 
+# disable fade animation for vicinae only
+layerrule = noanim, vicinae
 # Numpad binds
 
 ## Wallpaper
@@ -232,7 +238,7 @@ bind = $mainMod, KP_INSERT, exec, swww img ~/.local/share/wallpapers/0.jpg --tra
 bind = $mainMod, KP_END, exec, swww img ~/.local/share/wallpapers/1.jpg --transition-type center
 bind = $mainMod, KP_DOWN, exec, swww img ~/.local/share/wallpapers/2.jpg --transition-type center
 bind = $mainMod, KP_NEXT, exec, swww img ~/.local/share/wallpapers/3.jpg --transition-type center
-bind = $mainMod, KP_Left, exec, swww img ~/.local/share/allpapers/4.jpg  --transition-type center
+bind = $mainMod, KP_Left, exec, swww img ~/.local/share/wallpapers/4.jpg  --transition-type center
 bind = $mainMod, KP_Begin, exec, swww img ~/.local/share/wallpapers/5.jpg  --transition-type center
 bind = $mainMod, KP_Right, exec, swww img ~/.local/share/wallpapers/6.jpg  --transition-type center
 bind = $mainMod, KP_HOME, exec, pkill waybar && hyprctl dispatch exec waybar
