--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -9,7 +9,7 @@ initial_window_width 740
 initial_window_height 600
 
 # BEGIN_KITTY_FONTS
-font_family      family="Hack"
+font_family      family="Fira Code"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
