mod: quickshell bar shape change

--- a/home/bunny/config/hypr/hyprland.conf
+++ b/home/bunny/config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ monitor = HDMI-A-1, 1920x1080@60.00Hz, 0x0, 1 # This is the external monitor
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = nautilus 
+$fileManager = nautilus
 $menu = rofi -show run
 $emailClient = thunderbird
 
@@ -45,7 +45,7 @@ $emailClient = thunderbird
 
 exec-once = mako # Notification daemon
 exec-once = awww-daemon # Wallpaper stuff
-exec-once = quickshell -p ~/.config/quickshell 
+exec-once = quickshell -p ~/.config/quickshell
 exec-once = ~/.config/eww/scripts/powerbuttons # Custom widgets
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # Authentication Agent
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -55,9 +55,8 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 ### ENVIRONMENT VARIABLES ###
 #############################
 
-env = XCURSOR_SIZE,14
 env = HYPRCURSOR_SIZE,14
-env = HYPRCURSOR_THEME,Lilith_cursor
+env = HYPRCURSOR_THEME,hyprTachy
 
 #####################
 ### LOOK AND FEEL ###
@@ -70,7 +69,7 @@ cursor {
 
 general {
     gaps_in = 5
-    gaps_out = 12 
+    gaps_out = 12
 
     border_size = 1
 
@@ -88,7 +87,7 @@ general {
 }
 
 decoration {
-    rounding = 2 
+    rounding = 2
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
@@ -160,7 +159,7 @@ misc {
 
 input {
     kb_layout = br,cn
-    kb_options = grp:alt_space_toggle 
+    kb_options = grp:alt_space_toggle
     kb_variant =
     kb_model =
     kb_rules =
